[package]
name = "shoes-lib"
version = "0.2.8"
edition = "2024"
license = "MIT"
description = "A multi-protocol proxy server."
homepage = "https://github.com/MutableLock/shoes-lib"
repository = "https://github.com/MutableLock/shoes-lib"
readme = "README.md"
keywords = ["proxy", "proxy-server", "shadowsocks", "v2ray", "vmess"]
categories = ["command-line-utilities", "network-programming"]

[lib]
name = "shoeslib"
# rlib = Rust library (for Rust dependencies)
# cdylib = C dynamic library (.so on Linux/Android, .dylib on macOS)
# staticlib = C static library (.a) - required for iOS
crate-type = ["rlib", "cdylib", "staticlib"]


[features]
default = []
ffi = []  # Enable FFI module for non-Android builds

[dependencies]
async-trait = "0.1"
aws-lc-rs = { version = "1.15", default-features = false }
base64 = "0.22"
blake3 = "1.8"
bytes = "1.11"
chrono = "0.4"
dashmap = "6.1"
digest = "0.10"
etherparse = "0.19"
futures = "0.3"
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
# Git version required for H3 disable_grease option (needed for Cloudflare).
# Also pinned past older resolver active-request cleanup behavior.
# See: https://github.com/hickory-dns/hickory-dns/pull/2085
hickory-resolver = { git = "https://github.com/hickory-dns/hickory-dns", rev = "a1f77f52409a5225120988e2d3518be446328f6c", default-features = false, features = ["tokio", "tls-aws-lc-rs", "https-aws-lc-rs", "h3-aws-lc-rs"] }
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.8", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
indexmap = "2.13"
libc = "0.2"
log = { version = "0.4", features = ["std", "release_max_level_info"] }
lru = "0.16"
md-5 = "0.10"
memchr = "2.8"
mime_guess = "2.0"
notify = "8.2"
parking_lot = "0.12"
percent-encoding = "2.3"
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "runtime-tokio", "rustls-aws-lc-rs"] }
rand = "0.9"
rand_core = "0.9"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rust-argon2 = "3"
rustc-hash = "2.1"
rustls = "0.23"
serde = { version = "1.0", features = ["derive", "std"] }
serde_yaml = "0.9.34+deprecated"
sha3 = "0.10"
smoltcp = { version = "0.12", default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-icmp", "socket-udp", "socket-tcp", "socket-tcp-cubic", "phy-tuntap_interface", "assembler-max-segment-count-32"] }
socket2 = "0.6"
subtle = "2.6"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["time"] }
tun = { version = "0.8", features = ["async"] }
url = "2.5"
webpki-roots = { version = "1.0" }
x509-parser = { version = "0.18", default-features = false, features = ["verify-aws"] }

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pemfile = "2.2"
serde_json = "1.0"
tempfile = "3.25"
tokio-rustls = "0.26"

# jemalloc for better memory performance (not supported on Windows MSVC or iOS)
[target.'cfg(not(any(target_env = "msvc", target_os = "ios")))'.dependencies]
tikv-jemallocator = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"
jni = "*"
ndk-sys = "*"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
